# OpenEducation

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PUBLISHING.md  README.md  ROADMAP.md  SECURITY.md  agent_config_cardiology.json  config_cardiology.json  demo_script.py  docker-compose.ghcr.yml  docker-compose.yml  educational_services_demo.py  eld_demonstration.py  publish_to_github.sh  pyproject.toml  requirements.txt  tox.ini  world_languages_demonstration.py
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  compose-ci.yml  docker-publish.yml  release.yml  secrets-scan.yml  tests.yml
app/: anki_export.py  catalog.py  chunking.py  config.py  embeddings.py  extract.py  flashcards.py  llm.py  main.py  models.py  qdrant_store.py
docs/: AGENTS.md  PR_DRAFT_INITIAL_BETA.md  USAGE.md
examples/config_examples/: config.json  test_config.json
examples/sample_content/: neuro.md  test_text.txt
openeduc-ation/tui/widgets/: performance_viewer.py
openeducation/: cli.py  config.py  serve.py
openeducation/agents/: flow.py  tools.py
openeducation/anki_connect/: advanced.py  cli_integration.py  push.py
openeducation/assessment/: __init__.py  child_assessment.py  cli_integration.py
openeducation/coaching/: __init__.py  cli_integration.py  practice_based_coaching.py
openeducation/content/: extractor.py  pdf_utils.py  sources.py
openeducation/dashboard/: routes.py
openeducation/dashboard/static/: main.js  styles.css
openeducation/dashboard/templates/: index.html
openeducation/deck/: builder.py
openeducation/eld/: __init__.py  cli_integration.py  eld_core.py
openeducation/llm/: base.py  openai_wrapper.py  rulebased.py
openeducation/models/: card.py  content_block.py  deck.py  source.py
openeducation/observations/: __init__.py  cli_integration.py  observation_tools.py
openeducation/qa/: validate.py
openeducation/rag/: embeddings.py  retrieval.py
openeducation/scheduling/: cli_integration.py  progress_tracker.py
openeducation/syllabus/: __init__.py  cli_integration.py  generator.py
openeducation/tui/: app.py  styles.css
openeducation/tui/widgets/: dashboard.py  performance_viewer.py  syllabus_viewer.py
openeducation/utils/: io.py  logger.py  perf.py  report.py
openeducation/world_languages/: __init__.py  cli_integration.py  language_core.py
scripts/: check_secrets.py  publish.sh  run_tests.py  setup_macos.sh  smoke_test.py
static/: index.html  script.js  styles.css
tests/: test_app.py  test_core.py  test_eld.py  test_integration.py  test_world_languages.py
