[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openeducation"
version = "0.1.0"
description = "OpenEducation: ingest educational content and export Anki decks with RAG + Agents SDK."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenEducation Contributors"}]
classifiers = [
"Programming Language :: Python :: 3.11",
"License :: OSI Approved :: MIT License",
"Operating System :: MacOS",
]

[tool.setuptools.packages.find]
where = ["openeducation"]
